# onepass

./: Cargo.toml  README.md  flake.nix
src/: command.rs  encrypt.rs  file.rs  input.rs  main.rs  password.rs  resource.rs  text.rs
