[package]
name = "onepass"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
hmac-sha256 = "1.1.7"
termcolor = "1.4.1"
rpassword = "7.3.1"
ctrlc = "3.4.5"
rand = "0.8"
arboard = {version = "3.6.1", features = ["wayland-data-control"]}
[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                
    "fast-rng",          
]
